add the map & foursquare

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "neighborhood-map",
+  "name": "manutd-map-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "google-map-react": "^1.0.6",
+    "google-maps-react": "^2.0.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-foursquare": "^1.0.3",
     "react-scripts": "1.1.4"
   },
   "scripts": {
